<resources>
    <string name="app_name">test</string>
    <string name="create_post_hint">What is in your mind?</string>
    <string name="create_post_text1">Add Loc.  </string>
    <string name="create_post_text2">Add Photos  </string>
    <string name="post">POST NOW</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upgrade">Upgrade</string>
</resources>