<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_grey_bg"
    android:padding="@dimen/_2sdp"
    android:paddingBottom="@dimen/_10sdp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clNewPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <ImageView
                    android:id="@+id/ivProfile2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_profile_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profile" />


                <TextView
                    android:id="@+id/authorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="Adnan Qureshi "
                    android:textColor="@color/headingColor"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/ivProfile2"
                    app:layout_constraintStart_toEndOf="@id/ivProfile2"
                    app:layout_constraintTop_toTopOf="@+id/ivProfile2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/authorLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="Toronto"
                    android:textColor="@color/headingColor"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/authorName"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/authorName"
                    app:layout_constraintTop_toBottomOf="@+id/authorName" />

                <EditText
                    android:id="@+id/etCreatePost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:autofillHints="@string/create_post_hint"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/create_post_hint"
                    android:inputType="text"
                    android:maxLines="5"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintTop_toBottomOf="@+id/ivProfile2" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clloc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/sky_color_bg"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/selectedLocation"
                    app:layout_constraintTop_toBottomOf="@+id/selectedLocation">

                    <TextView
                        android:id="@+id/tvloc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_post_text1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivLoc"
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvloc"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_add_loc" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clUploads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/sky_color_bg"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintStart_toEndOf="@+id/clloc"
                    app:layout_constraintTop_toBottomOf="@+id/selectedLocation">

                    <TextView
                        android:id="@+id/tvUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_post_text2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivUploads"
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvUpload"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_pics_video"
                        tools:ignore="VectorDrawableCompat" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/selectedLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:padding="@dimen/_5sdp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/selectedImage">

                    <ImageView
                        android:id="@+id/ivLoc2"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_add_loc" />

                    <TextView
                        android:id="@+id/selectedLocationtxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_18sdp"
                        android:maxLines="1"
                        android:text="Toronto, Canada"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@id/ivLoc2"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/selectedImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCreatePost">

                    <ImageView
                        android:id="@+id/selectedImagetxt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_post_placeholder"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Want to Boost Now?"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/clloc"
                    app:layout_constraintTop_toBottomOf="@+id/clloc" />

                <Button
                    android:id="@+id/postButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg_state"
                    android:stateListAnimator="@null"
                    android:text="@string/post"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/postButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clNewPost"
                >


                <EditText
                    android:id="@+id/search_loc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:background="@drawable/edit_text_boarder"
                    android:hint="Where you are?"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/locList"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    tools:listitem="@layout/item_dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_loc" />

                <Button
                    android:id="@+id/saveLoc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg_state"
                    android:stateListAnimator="@null"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locList" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

