<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreatePost">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:id="@+id/complete"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent">-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clNewPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:paddingBottom="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">


                    <ImageView
                        android:id="@+id/ivProfile2"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_profile_placeholder"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/profile" />


                    <TextView
                        android:id="@+id/tvAuthorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="Adnan Qureshi "
                        android:textColor="@color/headingColor"
                        android:textSize="@dimen/_15ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/ivProfile2"
                        app:layout_constraintStart_toEndOf="@id/ivProfile2"
                        app:layout_constraintTop_toTopOf="@+id/ivProfile2"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/authorLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="Toronto"
                        android:textColor="@color/headingColor"
                        android:textSize="@dimen/_13ssp"
                        app:layout_constraintEnd_toEndOf="@+id/authorName"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/tvAuthorName"
                        app:layout_constraintTop_toBottomOf="@+id/tvAuthorName" />

                    <EditText
                        android:id="@+id/etCreatePost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:autofillHints="@string/create_post_hint"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/create_post_hint"
                        android:inputType="text"
                        android:maxLines="5"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivProfile2" />

                    <ImageView
                        android:id="@+id/ivSelected"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_marginTop="4dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_post_placeholder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etCreatePost" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/view_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivSelected" />


                    <TextView
                        android:id="@+id/tvSelectedLocationtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:drawablePadding="@dimen/_5sdp"
                        android:maxLines="1"
                        android:text="Toronto, Canada"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        app:drawableStartCompat="@drawable/ic_post_loc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivSelected" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/view_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSelectedLocationtxt" />

                    <TextView
                        android:id="@+id/tvLoc"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25ssp"
                        android:background="@color/skyColor_bg"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/create_post_text1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:drawableEndCompat="@drawable/ic_post_loc"
                        app:layout_constraintEnd_toEndOf="@id/tvSelectedLocationtxt"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/tvSelectedLocationtxt"
                        app:layout_constraintTop_toBottomOf="@+id/tvSelectedLocationtxt" />


                    <TextView
                        android:id="@+id/tvUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:background="@color/skyColor_bg"
                        android:drawableEnd="@drawable/ic_pics_video"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/create_post_text2"
                        android:textAlignment="textStart"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLoc"
                        app:layout_constraintStart_toEndOf="@+id/tvLoc"
                        app:layout_constraintTop_toBottomOf="@+id/tvSelectedLocationtxt" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/view_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvUpload" />

                    <TextView
                        android:id="@+id/tv_boost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Want to Boost Now?"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_17ssp"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/tvLoc"
                        app:layout_constraintTop_toBottomOf="@+id/tvLoc" />

                    <Button
                        android:id="@+id/btnPostNow"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button_bg_state"
                        android:text="@string/post"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14ssp"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_boost" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/clNewPost"-->
<!--                    >-->


<!--                    <EditText-->
<!--                        android:id="@+id/search_loc"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="@dimen/_40sdp"-->
<!--                        android:layout_marginHorizontal="@dimen/_10sdp"-->
<!--                        android:layout_marginVertical="@dimen/_5sdp"-->
<!--                        android:background="@drawable/edit_text_boarder"-->
<!--                        android:hint="Where you are?"-->
<!--                        android:inputType="text"-->
<!--                        android:padding="@dimen/_5sdp"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent" />-->

<!--                    <androidx.recyclerview.widget.RecyclerView-->
<!--                        android:id="@+id/locList"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="@dimen/_200sdp"-->
<!--                        android:layout_marginHorizontal="@dimen/_10sdp"-->
<!--                        android:layout_marginVertical="@dimen/_5sdp"-->
<!--                        tools:listitem="@layout/item_dialog"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintHorizontal_bias="0.0"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/search_loc" />-->

<!--                    <Button-->
<!--                        android:id="@+id/saveLoc"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="@dimen/button_height"-->
<!--                        android:layout_marginHorizontal="@dimen/_10sdp"-->
<!--                        android:layout_marginTop="16dp"-->
<!--                        android:background="@drawable/button_bg_state"-->
<!--                        android:stateListAnimator="@null"-->
<!--                        android:text="@string/save"-->
<!--                        android:textColor="@android:color/white"-->
<!--                        android:textSize="@dimen/_14ssp"-->
<!--                        android:visibility="visible"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/locList" />-->


<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


        </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>